ccu.pllab.tcgen/src/ccu/pllab/tcgen/libs/clpresultparse/ResultParser.java
// Generated from Result.g4 by ANTLR 4.4
package ccu.pllab.tcgen.libs.clpresultparse;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ResultParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__12=1, T__11=2, T__10=3, T__9=4, T__8=5, T__7=6, T__6=7, T__5=8, T__4=9, 
		T__3=10, T__2=11, T__1=12, T__0=13, STRUCTNAME=14, ID=15, INTEGER=16, 
		FLOAT=17, NUMBER=18, LETTER=19, WS=20;
	public static final String[] tokenNames = {
		"<INVALID>", "'ARG'", "'uml_asc'", "'POST'", "'uml_obj'", "'void'", "'['", 
		"']'", "'='", "'[]'", "'('", "')'", "','", "'PRE'", "STRUCTNAME", "ID", 
		"INTEGER", "FLOAT", "NUMBER", "LETTER", "WS"
	};
	public static final int
		RULE_result = 0, RULE_preStateStr = 1, RULE_postStateStr = 2, RULE_argStr = 3, 
		RULE_stateList = 4, RULE_argList = 5, RULE_argRet = 6, RULE_argSelf = 7, 
		RULE_argArg = 8, RULE_pairedObj = 9, RULE_pairedLiteral = 10, RULE_elms = 11, 
		RULE_objElmList = 12, RULE_ascElmList = 13, RULE_objElm = 14, RULE_ascElm = 15, 
		RULE_literal = 16, RULE_list = 17;
	public static final String[] ruleNames = {
		"result", "preStateStr", "postStateStr", "argStr", "stateList", "argList", 
		"argRet", "argSelf", "argArg", "pairedObj", "pairedLiteral", "elms", "objElmList", 
		"ascElmList", "objElm", "ascElm", "literal", "list"
	};

	@Override
	public String getGrammarFileName() { return "Result.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ResultParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ResultContext extends ParserRuleContext {
		public PreStateStrContext preStateStr() {
			return getRuleContext(PreStateStrContext.class,0);
		}
		public PostStateStrContext postStateStr() {
			return getRuleContext(PostStateStrContext.class,0);
		}
		public ArgStrContext argStr() {
			return getRuleContext(ArgStrContext.class,0);
		}
		public ResultContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_result; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).enterResult(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).exitResult(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ResultVisitor ) return ((ResultVisitor<? extends T>)visitor).visitResult(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ResultContext result() throws RecognitionException {
		ResultContext _localctx = new ResultContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_result);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36); preStateStr();
			setState(37); argStr();
			setState(38); postStateStr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreStateStrContext extends ParserRuleContext {
		public StateListContext stateList() {
			return getRuleContext(StateListContext.class,0);
		}
		public PreStateStrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preStateStr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).enterPreStateStr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).exitPreStateStr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ResultVisitor ) return ((ResultVisitor<? extends T>)visitor).visitPreStateStr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PreStateStrContext preStateStr() throws RecognitionException {
		PreStateStrContext _localctx = new PreStateStrContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_preStateStr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40); match(T__0);
			setState(41); match(T__5);
			setState(42); stateList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PostStateStrContext extends ParserRuleContext {
		public StateListContext stateList() {
			return getRuleContext(StateListContext.class,0);
		}
		public PostStateStrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_postStateStr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).enterPostStateStr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).exitPostStateStr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ResultVisitor ) return ((ResultVisitor<? extends T>)visitor).visitPostStateStr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PostStateStrContext postStateStr() throws RecognitionException {
		PostStateStrContext _localctx = new PostStateStrContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_postStateStr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44); match(T__10);
			setState(45); match(T__5);
			setState(46); stateList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgStrContext extends ParserRuleContext {
		public ArgListContext argList() {
			return getRuleContext(ArgListContext.class,0);
		}
		public ArgStrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argStr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).enterArgStr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).exitArgStr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ResultVisitor ) return ((ResultVisitor<? extends T>)visitor).visitArgStr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgStrContext argStr() throws RecognitionException {
		ArgStrContext _localctx = new ArgStrContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_argStr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48); match(T__12);
			setState(49); match(T__5);
			setState(50); argList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateListContext extends ParserRuleContext {
		public ElmsContext elms(int i) {
			return getRuleContext(ElmsContext.class,i);
		}
		public List<ElmsContext> elms() {
			return getRuleContexts(ElmsContext.class);
		}
		public StateListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stateList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).enterStateList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).exitStateList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ResultVisitor ) return ((ResultVisitor<? extends T>)visitor).visitStateList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StateListContext stateList() throws RecognitionException {
		StateListContext _localctx = new StateListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stateList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52); match(T__7);
			setState(53); elms();
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(54); match(T__1);
				setState(55); elms();
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(61); match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgListContext extends ParserRuleContext {
		public List<ArgArgContext> argArg() {
			return getRuleContexts(ArgArgContext.class);
		}
		public ArgRetContext argRet() {
			return getRuleContext(ArgRetContext.class,0);
		}
		public ArgSelfContext argSelf() {
			return getRuleContext(ArgSelfContext.class,0);
		}
		public ArgArgContext argArg(int i) {
			return getRuleContext(ArgArgContext.class,i);
		}
		public ArgListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).enterArgList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).exitArgList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ResultVisitor ) return ((ResultVisitor<? extends T>)visitor).visitArgList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgListContext argList() throws RecognitionException {
		ArgListContext _localctx = new ArgListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_argList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63); match(T__7);
			setState(64); argRet();
			setState(65); match(T__1);
			setState(66); argSelf();
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(67); match(T__1);
				setState(68); argArg();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(74); match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgRetContext extends ParserRuleContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public ObjElmContext objElm() {
			return getRuleContext(ObjElmContext.class,0);
		}
		public ArgRetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argRet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).enterArgRet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).exitArgRet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ResultVisitor ) return ((ResultVisitor<? extends T>)visitor).visitArgRet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgRetContext argRet() throws RecognitionException {
		ArgRetContext _localctx = new ArgRetContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_argRet);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			switch (_input.LA(1)) {
			case T__8:
				{
				setState(76); match(T__8);
				}
				break;
			case T__7:
			case INTEGER:
			case FLOAT:
				{
				setState(77); literal();
				}
				break;
			case T__3:
				{
				setState(78); objElm();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgSelfContext extends ParserRuleContext {
		public PairedObjContext pairedObj() {
			return getRuleContext(PairedObjContext.class,0);
		}
		public ArgSelfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argSelf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).enterArgSelf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).exitArgSelf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ResultVisitor ) return ((ResultVisitor<? extends T>)visitor).visitArgSelf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgSelfContext argSelf() throws RecognitionException {
		ArgSelfContext _localctx = new ArgSelfContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_argSelf);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81); pairedObj();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgArgContext extends ParserRuleContext {
		public PairedLiteralContext pairedLiteral() {
			return getRuleContext(PairedLiteralContext.class,0);
		}
		public PairedObjContext pairedObj() {
			return getRuleContext(PairedObjContext.class,0);
		}
		public ArgArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argArg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).enterArgArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).exitArgArg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ResultVisitor ) return ((ResultVisitor<? extends T>)visitor).visitArgArg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgArgContext argArg() throws RecognitionException {
		ArgArgContext _localctx = new ArgArgContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_argArg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(83); pairedLiteral();
				}
				break;
			case 2:
				{
				setState(84); pairedObj();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PairedObjContext extends ParserRuleContext {
		public List<ObjElmContext> objElm() {
			return getRuleContexts(ObjElmContext.class);
		}
		public ObjElmContext objElm(int i) {
			return getRuleContext(ObjElmContext.class,i);
		}
		public PairedObjContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pairedObj; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).enterPairedObj(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).exitPairedObj(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ResultVisitor ) return ((ResultVisitor<? extends T>)visitor).visitPairedObj(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PairedObjContext pairedObj() throws RecognitionException {
		PairedObjContext _localctx = new PairedObjContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_pairedObj);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87); match(T__7);
			setState(90);
			switch (_input.LA(1)) {
			case T__3:
				{
				setState(88); objElm();
				}
				break;
			case T__4:
				{
				setState(89); match(T__4);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(92); match(T__1);
			setState(93); objElm();
			setState(94); match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PairedLiteralContext extends ParserRuleContext {
		public LiteralContext literal(int i) {
			return getRuleContext(LiteralContext.class,i);
		}
		public List<LiteralContext> literal() {
			return getRuleContexts(LiteralContext.class);
		}
		public PairedLiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pairedLiteral; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).enterPairedLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).exitPairedLiteral(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ResultVisitor ) return ((ResultVisitor<? extends T>)visitor).visitPairedLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PairedLiteralContext pairedLiteral() throws RecognitionException {
		PairedLiteralContext _localctx = new PairedLiteralContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_pairedLiteral);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96); match(T__7);
			setState(97); literal();
			setState(98); match(T__1);
			setState(99); literal();
			setState(100); match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElmsContext extends ParserRuleContext {
		public AscElmListContext ascElmList() {
			return getRuleContext(AscElmListContext.class,0);
		}
		public ObjElmListContext objElmList() {
			return getRuleContext(ObjElmListContext.class,0);
		}
		public ElmsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elms; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).enterElms(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).exitElms(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ResultVisitor ) return ((ResultVisitor<? extends T>)visitor).visitElms(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElmsContext elms() throws RecognitionException {
		ElmsContext _localctx = new ElmsContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_elms);
		try {
			setState(110);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(102); match(T__4);
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				setState(103); match(T__7);
				setState(106);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(104); objElmList();
					}
					break;
				case 2:
					{
					setState(105); ascElmList();
					}
					break;
				}
				setState(108); match(T__6);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjElmListContext extends ParserRuleContext {
		public List<ObjElmContext> objElm() {
			return getRuleContexts(ObjElmContext.class);
		}
		public ObjElmContext objElm(int i) {
			return getRuleContext(ObjElmContext.class,i);
		}
		public ObjElmListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objElmList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).enterObjElmList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).exitObjElmList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ResultVisitor ) return ((ResultVisitor<? extends T>)visitor).visitObjElmList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjElmListContext objElmList() throws RecognitionException {
		ObjElmListContext _localctx = new ObjElmListContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_objElmList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112); objElm();
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(113); match(T__1);
				setState(114); objElm();
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AscElmListContext extends ParserRuleContext {
		public AscElmContext ascElm(int i) {
			return getRuleContext(AscElmContext.class,i);
		}
		public List<AscElmContext> ascElm() {
			return getRuleContexts(AscElmContext.class);
		}
		public AscElmListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ascElmList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).enterAscElmList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).exitAscElmList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ResultVisitor ) return ((ResultVisitor<? extends T>)visitor).visitAscElmList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AscElmListContext ascElmList() throws RecognitionException {
		AscElmListContext _localctx = new AscElmListContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_ascElmList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120); ascElm();
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(121); match(T__1);
				setState(122); ascElm();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjElmContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(ResultParser.INTEGER, 0); }
		public LiteralContext literal(int i) {
			return getRuleContext(LiteralContext.class,i);
		}
		public TerminalNode STRUCTNAME() { return getToken(ResultParser.STRUCTNAME, 0); }
		public List<LiteralContext> literal() {
			return getRuleContexts(LiteralContext.class);
		}
		public List<ObjElmContext> objElm() {
			return getRuleContexts(ObjElmContext.class);
		}
		public ObjElmContext objElm(int i) {
			return getRuleContext(ObjElmContext.class,i);
		}
		public ObjElmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objElm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).enterObjElm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).exitObjElm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ResultVisitor ) return ((ResultVisitor<? extends T>)visitor).visitObjElm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjElmContext objElm() throws RecognitionException {
		ObjElmContext _localctx = new ObjElmContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_objElm);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128); match(T__3);
			setState(129); match(T__9);
			setState(130); match(T__1);
			setState(131); match(STRUCTNAME);
			setState(132); match(T__1);
			setState(133); match(INTEGER);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(134); match(T__1);
				setState(137);
				switch (_input.LA(1)) {
				case T__7:
				case INTEGER:
				case FLOAT:
					{
					setState(135); literal();
					}
					break;
				case T__3:
					{
					setState(136); objElm();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(144); match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AscElmContext extends ParserRuleContext {
		public List<TerminalNode> INTEGER() { return getTokens(ResultParser.INTEGER); }
		public TerminalNode STRUCTNAME() { return getToken(ResultParser.STRUCTNAME, 0); }
		public TerminalNode INTEGER(int i) {
			return getToken(ResultParser.INTEGER, i);
		}
		public AscElmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ascElm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).enterAscElm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).exitAscElm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ResultVisitor ) return ((ResultVisitor<? extends T>)visitor).visitAscElm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AscElmContext ascElm() throws RecognitionException {
		AscElmContext _localctx = new AscElmContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_ascElm);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146); match(T__3);
			setState(147); match(T__11);
			setState(148); match(T__1);
			setState(149); match(STRUCTNAME);
			setState(150); match(T__1);
			setState(151); match(INTEGER);
			setState(152); match(T__1);
			setState(153); match(INTEGER);
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(154); match(T__1);
				setState(155); match(INTEGER);
				}
				}
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(161); match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(ResultParser.INTEGER, 0); }
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public TerminalNode FLOAT() { return getToken(ResultParser.FLOAT, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).enterLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ResultListener ) ((ResultListener)listener).exitLiteral(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ResultVisitor ) return ((ResultVisitor<? extends T>)visitor).visitLiteral(this);
			else return visitor.visitChildren(this);
		}
	}
